maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: illegal start of simple expression
  var x, y:Int = case(0), case(1);
                 ^